tests/snapshots/errors/builtin_push_type_error.mc
let arr: array<int> = [1, 2, 3];
push(arr, "hello");
